[tool.poetry]
name = "status-dashboard"
version = "1.0.0"
description = "A minimal Flask status dashboard"
authors = []
readme = "README.md"
 
[tool.poetry.dependencies]
python = "^3.11"
flask = "3.1.1"
werkzeug = "3.1.3"
python-dotenv = "1.1.0"
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"